--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -11,7 +11,7 @@
   
 
 <!-- Menu do topo --> 
-      <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
+      <nav id="navbar" class="navbar navbar-expand-lg fixed-top">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
