--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
@@ -32,28 +31,29 @@
   <br><br><br>
   
 
-<div class="container-fluid bg_cadastro">
-  <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <div class="col-md-12 text-center">
-        <h2 style="margin-bottom: 50px;">Crie sua conta</h2>
-      </div>
-      <form name="cadastro" class="form-group cadastro">
-        <p class="lbl_cadastro">Email</p>
-        <input type="email" name="email" placeholder="Email" class="form-control box shadow-sm" required>
-        <p class="lbl_cadastro">Nome</p>
-        <input type="text" name="nome" placeholder="Nome" class="form-control box shadow-sm" required>
-        <p class="lbl_cadastro">Senha</p>
-        <input type="password" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
+  <div class="container-fluid bg_cadastro">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
         <div class="col-md-12 text-center">
-          <a href="home.html" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Cadastrar</a>
+          <h2 style="margin-bottom: 50px;">Crie sua conta</h2>
         </div>
-      </form>
+        <form name="cadastro" class="form-group cadastro">
+          <p class="lbl_cadastro">Email</p>
+          <input type="email" id="email" name="email" placeholder="Email" class="form-control box shadow-sm" required>
+          <div id="msgEmail"></div>
+          <p class="lbl_cadastro">Nome</p>
+          <input type="text" id="nome" name="nome" placeholder="Nome" class="form-control box shadow-sm" required>
+          <p class="lbl_cadastro">Senha</p>
+          <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
+          <div class="col-md-12 text-center">
+            <a href="home.html" onclick="tentarGravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Cadastrar</a>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-4"></div>
     </div>
-    <div class="col-md-4"></div>
-  </div>
-</div><br><br><br>
+  </div><br><br><br>
 
  <footer class="container-fluid" style="background-color: #41679B">
 
@@ -61,3 +61,6 @@
         <p>&copy DigitaVac 2021</p>
       </div>
   </footer>
+
+  <script type='text/javascript' src="js/cadastro.js"></script>
+</body>
