ALterando redirecionamento de pagina

--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -47,7 +47,7 @@
           <p class="lbl_cadastro">Senha</p>
           <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
           <div class="col-md-12 text-center">
-            <a href="home.html" onclick="tentarGravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Cadastrar</a>
+            <a href="login.html" onclick="tentarGravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Cadastrar</a>
           </div>
         </form>
       </div>
