--- a/Codigo/editarCadastroSelecao.html
+++ b/Codigo/editarCadastroSelecao.html
@@ -42,15 +42,10 @@
           <p class="lbl_cadastro">Email</p>
           <input type="email" id="email" name="email" placeholder="Email" class="form-control box shadow-sm" required>
           <div id="msgEmail"></div>
-          <p class="lbl_cadastro">Nome</p>
-          <input type="text" id="nome" name="nome" placeholder="Nome" class="form-control box shadow-sm" required>
           <p class="lbl_cadastro">Senha</p>
           <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
           <div class="col-md-12 text-center">
-            <a href="login.html" onclick="tentarGravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Cadastrar</a>
-          </div>
-          <div class="col-md-12 text-center">
-            <a href="editarCadastroSelecao.html" onclick="tentarGravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Editar cadastro</a>
+            <a href="#" onclick="validarEdicao(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Editar</a>
           </div>
         </form>
       </div>
