--- a/Codigo/ajuda.html
+++ b/Codigo/ajuda.html
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+ 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,26 +21,30 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="calendario.html">Calendário</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="historico.html">Histórico</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="info.html">Informações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="config.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Sair</a>
-      </li>
+    <div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="home.html">Home</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="calendario.html">Calendário</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="historico.html">Histórico</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="info.html">Informações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="config.html">Configurações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="login.html">Sair</a>
+    </div>
+
+  </div>
+</div>
+
 </nav>
 </head>
 
@@ -63,7 +65,7 @@
   </div>
 
         <div class="col-md-12 text-center">
-          <a href="home.html" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Enviar</a>
+          <a href="home.html" type="button" class="btn btnnovo" style="margin-bottom: 100px;">Enviar</a>
           <p>A resposta chegará para você no email cadastrado</p>
         </div>
     </div>
@@ -72,10 +74,8 @@
 </div><br><br><br>
 
 
+  <footer>
 
- <footer class="container-fluid" style="background-color: #41679B">
-
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
