--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <br><br><br>
+  <br><br><br><br><br><br>
   
 
   <div class="container-fluid bg_cadastro">
@@ -47,10 +47,10 @@
           <p class="lbl_cadastro">Senha</p>
           <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
           <div class="col-md-12 text-center">
-            <a href="login.html" onclick="tentarGravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Cadastrar</a>
+            <a href="login.html" onclick="tentarGravar(event)" type="button" class="btn btnnovo shadow" style="margin-bottom: 100px;">Cadastrar</a>
           </div>
           <div class="col-md-12 text-center">
-            <a href="editarCadastroSelecao.html" onclick="tentarGravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Editar cadastro</a>
+            <a href="editarCadastroSelecao.html" onclick="tentarGravar(event)" type="button" class="btn btnnovo shadow" style="margin-bottom: 100px;">Editar cadastro</a>
           </div>
         </form>
       </div>
@@ -58,12 +58,13 @@
     </div>
   </div><br><br><br>
 
- <footer class="container-fluid" style="background-color: #41679B">
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+ <footer>
+
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
+
 
   <script type='text/javascript' src="js/cadastro.js"></script>
 </body>
