--- a/Codigo/calendario.html
+++ b/Codigo/calendario.html
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,41 +21,111 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="calendario.html">Calendário</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="historico.html">Histórico</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="info.html">Informações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="config.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Sair</a>
-      </li>
+<div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="home.html">Home</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="calendario.html"><strong>Calendário</strong></a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="historico.html">Histórico</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="info.html">Informações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="config.html">Configurações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="login.html">Sair</a>
+    </div>
+
+  </div>
+</div>
+
 </nav>
 </head>
 
 <body>
   <br><br><br><br>
 
-<center>
-<iframe src="https://calendar.google.com/calendar/embed?src=dianamsantos0%40gmail.com&ctz=America%2FSao_Paulo" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-</center>
+<div class="container"><center>
+  <div class="row">
+  <div class="col-md-4"><a type="button" class="btn btnnovo" href="#"><</a></div>
+  <div class="col-md-4"><a type="button" class="btn btnnovo" href="#">NOVEMBRO</a></div>
+  <div class="col-md-4"><a type="button" class="btn btnnovo" href="#">></a></div>
+</div></center><br>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">DOM</th>
+      <th scope="col">SEG</th>
+      <th scope="col">TER</th>
+      <th scope="col">QUA</th>
+      <th scope="col">QUI</th>
+      <th scope="col">SEX</th>
+      <th scope="col">SÁB</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row"></th>
+      <td>1</td>
+      <td>2</td>
+      <td>3</td>
+      <td>4</td>
+      <td>5<br>Gripe</td>
+      <td>6</td>
+    </tr>
+    <tr>
+      <th scope="row">7</th>
+      <td>8</td>
+      <td>9</td>
+      <td>10</td>
+      <td>11</td>
+      <td>12</td>
+      <td>13</td>
+    </tr>
+    <tr>
+      <th scope="row">14</th>
+      <td>15</td>
+      <td>16</td>
+      <td>17<br> Campanha BCG</td>
+      <td>18<br> Campanha BCG</td>
+      <td>19<br> Campanha BCG</td>
+      <td>20<br> Campanha BCG</td>
+    </tr>
+    <tr>
+      <th scope="row">21<br> Campanha BCG</th>
+      <td>22<br> Campanha BCG</td>
+      <td>23<br> Campanha BCG</td>
+      <td>24</td>
+      <td>25</td>
+      <td>26</td>
+      <td>27</td>
+    </tr>
+    <tr>
+      <th scope="row">28</th>
+      <td>29</td>
+      <td>30</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
+</div>
+
+
  <br><br><br>
 
-<a type="button" class="btn btn-light" href="ajuda.html">Ajuda</a>
- <footer class="container-fluid" style="background-color: #41679B">
+<a type="button" class="btn btnnovo" href="ajuda.html">Ajuda</a>
+  <footer>
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
