--- a/Codigo/config.html
+++ b/Codigo/config.html
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,26 +21,30 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="calendario.html">Calendário</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="historico.html">Histórico</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="info.html">Informações</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="config.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Sair</a>
-      </li>
+    <div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="home.html">Home</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="calendario.html">Calendário</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="historico.html">Histórico</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="info.html">Informações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="config.html"><strong>Configurações</strong></a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="login.html">Sair</a>
+    </div>
+
+  </div>
+</div>
+      
 </nav>
 </head>
 
@@ -72,18 +74,18 @@
   <input type="checkbox" id="geral" name="geral">
   <label for="geral">Próximas vacinas</label><br>
         <div class="col-md-12 text-center">
-          <a href="config.html" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Salvar</a>
+          <a href="config.html" type="button" class="btn btnnovo shadow" style="margin-bottom: 100px;">Salvar</a>
         </div>
       </form>
     </div>
     <div class="col-md-4"></div>
   </div>
 </div><br><br><br>
-<a type="button" class="btn btn-light" href="ajuda.html">Ajuda</a>
+<a type="button" class="btn btnnovo" href="ajuda.html">Ajuda</a>
 
- <footer class="container-fluid" style="background-color: #41679B">
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+  <footer>
+
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
