--- a/Codigo/configadm.html
+++ b/Codigo/configadm.html
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+ 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,28 +21,32 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item ">
-        <a class="nav-link" href="homeadm.html">Home</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="avisosadm.html">Avisos</a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link" href="cadadm.html">Cadastrar Adm</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="campanhas.html">Campanhas</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="configadm.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="loginadm.html">Sair</a>
-      </li>
-    </ul>
+<div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="homeadm.html"> Home</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="avisosadm.html">Avisos</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="cadadm.html">Cadastrar ADM</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="campanhas.html">Campanhas</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="configadm.html"><strong> Configurações </strong></a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="loginadm.html">Sair</a>
+    </div>
+
   </div>
+</div>
+     
+  </div>
+
 </nav>
 </head>
 
@@ -65,10 +67,10 @@
         <p class="lbl_cadastro">Nome</p>
         <input type="text" name="nome" placeholder="Nome" class="form-control box shadow-sm" required>
         <p class="lbl_cadastro">Senha</p>
-        <input type="password" name="senha" placeholder="Senha" class="form-control box shadow-sm" required>
+        <input type="password" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
         
         <div class="col-md-12 text-center">
-          <a href="sucesso.html" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Criar</a>
+          <a href="sucesso.html" type="button" class="btn btnnovo" style="margin-bottom: 100px;">Criar</a>
         </div>
       </form>
     </div>
@@ -76,9 +78,8 @@
   </div>
 </div><br><br><br>
 
- <footer class="container-fluid" style="background-color: #41679B">
+<footer>
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
