--- a/Codigo/historico.html
+++ b/Codigo/historico.html
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,33 +21,39 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="calendario.html">Calendário</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" href="historico.html">Histórico</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="info.html">Informações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="config.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Sair</a>
-      </li>
+    <div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="home.html">Home</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="calendario.html">Calendário</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="historico.html"><strong>Histórico</strong></a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="info.html">Informações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="config.html">Configurações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="login.html">Sair</a>
+    </div>
+
+  </div>
+</div>
+
 </nav>
 </head>
 
 <body>
   <br><br><br><br>
 
-  <a type="button" class="btn btn-light" href="novohistorico.html">Adicionar</a> <br><br><br>
+  <a type="button" class="btn btnnovo" href="novohistorico.html">Adicionar</a> 
+  <a type="button" class="btn btnnovo" href="ajuda.html">Ajuda</a>
+<br><br><br>
 
 <div class="container"><center>
 <table class="table">
@@ -63,24 +67,19 @@
   </thead>
   <tbody>
     <tr>
-      <td scope="row">Coronavac</td>
+      <td scope="row">Coronavac - 1 dose</td>
       <td>29/09/2021</td>
       <td>sim</td>
       <td><a href="editarhist.html">EDITAR</a>
 </td>
     </tr>
     <tr>
-      <td scope="row">Coronavac</td>
-      <td>29/09/2021</td>
+      <td scope="row">Coronavac - 2 dose </td>
+      <td>14/10/2021</td>
       <td>sim</td>
       <td><a href="editarhist.html">EDITAR</a>
     </tr>
-    <tr>
-      <td scope="row">Coronavac</td>
-      <td>29/09/2021</td>
-      <td>sim</td>
-      <td><a href="editarhist.html">EDITAR</a>
-    </tr>
+    
   </tbody>
 </table>
 </div>
@@ -88,10 +87,8 @@
 
  <br><br><br>
 
-<a type="button" class="btn btn-light" href="ajuda.html">Ajuda</a>
- <footer class="container-fluid" style="background-color: #41679B">
+  <footer style="bottom:0;">
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
