--- a/Codigo/home.html
+++ b/Codigo/home.html
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,53 +21,51 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="home.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="calendario.html">Calendário</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="historico.html">Histórico</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="info.html">Informações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="config.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Sair</a>
-      </li>
+    <div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="home.html"><strong>Home</strong></a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="calendario.html">Calendário</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="historico.html">Histórico</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="info.html">Informações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="config.html">Configurações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="login.html">Sair</a>
+    </div>
+
+  </div>
+</div>
+     
 </nav>
 </head>
 
 <body>
-  <br><br><br>
+  <br><br><br><br><br><br>
   
 <div id="projetos" class="container-fluid">
 <center> <img src="imagens/digitalize.png" style="width: 90%"><br> 
-<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4><br>
-      <a type="button" class="btn btn-light" href="historico.html">Atualizar histórico</a>
-</center>
+<h4><br>O DigitaVac é um projeto criado pelo grupo 05 da disciplina de TIAW em Engenharia de Software - PUC MG, que procura facilitar a vida de cidadãos que têm dificuldade em acompanhar vacinas passadas e futuras, tomadas ou perdidas, através de um cadastro simples e notificações das mesmas. Comece agora!</h4><br>
+      <a href="historico.html"  type="button" class="btn btnnovo">Atualizar histórico</a>
+</center><br>
 </div>
 
 <center><div id="projetos" class="col-8" style="background-color: #EBBD47;">
-AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1<br>
-AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2
+USUÁRIO, você tem uma vacina programada para o dia 05/11/2021. Confira o seu calendário<br> <hr>
+USUÁRIO, há uma nova campanha de vacinação para a terceira dose da vacina contra COVID-19. Confira a notificação no seu email cadastrado.
 </div></center> <br><br><br>
 
 
- <footer class="container-fluid" style="background-color: #41679B">
+  <footer>
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
