--- a/Codigo/homeadm.html
+++ b/Codigo/homeadm.html
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,28 +21,32 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="homeadm.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="avisosadm.html">Avisos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cadadm.html">Cadastrar Adm</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="campanhas.html">Campanhas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="configadm.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="loginadm.html">Sair</a>
-      </li>
-    </ul>
+<div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="homeadm.html"><strong> Home </strong></a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="avisosadm.html">Avisos</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="cadadm.html">Cadastrar ADM</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="campanhas.html">Campanhas</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="configadm.html">Configurações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="loginadm.html">Sair</a>
+    </div>
+
   </div>
+</div>
+     
+  </div>
+
 </nav>
 </head>
 
@@ -53,20 +55,15 @@
 
 
 <center><div id="projetos" class="col-8" style="background-color: #EBBD47;">
-AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1<br>
-AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2<br>
-AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3<br>
-AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4<br>
-AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1AVISO 1<br>
-AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2AVISO 2<br>
-AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3AVISO 3<br>
-AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4AVISO 4
+O ADM 1 é o responsável pela campanha de covid-19<hr>
+O ADM 3 é o responsável pela campanha de gripe<hr>
+Campanha de BCG de 17 a 23 de novembro<hr>
+
 </div></center> <br><br><br>
 
 
- <footer class="container-fluid" style="background-color: #41679B; position: absolute; bottom: 0;">
+<footer style="bottom:0;">
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
