--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
   
 
 <!-- Menu do topo --> 
@@ -18,10 +18,10 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <img src="imagens/logoneg.png" style="width: 30%">
+        <img src="imagens/logoneg.png" style="width: 40%;">
       </li>
       <li class="nav-item">
-      <a type="button" class="btn btn-light" href="login.html">Login</a>
+      <a type="button" class="btn btn-light" href="login.html">LOGIN</a>
       </li>
     </ul>
     </div>
@@ -33,49 +33,48 @@
 
 <!-- apresentação --> 
 
+<div class="container-fluid">
   <div class="row">
-    <div class="col-sm-5">
-      <img src="imagens/vac.jpg" style="width: 70%"> <br><br>
+    <div class="col-sm-1"></div>
+    <div class="col-sm-4">
+      <img src="imagens/vac.jpg" style="width: 90%"><br><br>
     </div>
-    <div class="col-sm-7" style="text-align: left;">
-      <h4 style="color:#0f3a73;"><strong>O que fazemos</strong></h4>
-      <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+    <div class="col-sm-6">
+      <h4><strong>O que fazemos</strong></h4>
+      <h4>O DigitaVac é um projeto criado pelo grupo 05 da disciplina de TIAW em Engenharia de Software - PUC MG, que procura facilitar a vida de cidadãos que têm dificuldade em acompanhar vacinas passadas e futuras, tomadas ou perdidas, através de um cadastro simples e notificações das mesmas.</h4>
     </div>
   </div>
-</div><br><br>
+</div>
+<br><br>
 
-<div id="projetos" class="container-fluid">
-<center> <img src="imagens/digitalize.png" style="width: 90%"> </center>
-</div><br>
+<div>
+<center> <img src="imagens/digitalize.png" style="width: 90%;"> </center>
+</div><br><br>
 
   
 
-<div id="projetos" class="container-fluid">
-<center><a type="button" class="btn btn-primary" href="cadastro.html">Cadastrar</a></center></div>
+<div class="container-fluid">
+<center><a type="button" class="btn btn-primary" href="cadastro.html">Cadastre-se</a></center></div>
 
 
-<div id="projetos" class="container-fluid">
+<div class="container-fluid">
 <center><br><br>
 
-<h3> Nos siga nas nossas redes sociais! </h3>
-<a href="#"><i class="fab fa-instagram fab-social"></i>
-<a href="#"><i class="fab fa-linkedin fab-social"></i></a>
-<a href="#"><i class="fab fa-twitter fab-social"></i></a>
+<h3> Nos siga nas nossas redes sociais! </h3><br>
+<a href="https://instagram.com" target="blank"><i class="fab fa-instagram fab-social"></i></a>
+<a href="https://linkedin.com.br" target="blank"><i class="fab fa-linkedin fab-social"></i></a>
+<a href="https://twitter.com" target="blank"><i class="fab fa-twitter fab-social"></i></a>
 </center></div>
+</center>
+
 
 <br><br>
 
 
-  <footer class="container-fluid" style="background-color: #41679B">
+  <footer>
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
 
 
