--- a/Codigo/sucesso.html
+++ b/Codigo/sucesso.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 
   <head>
-  <title>Digitavac - Criar Histórico</title>
+  <title>Digitavac - Sucesso!</title>
   <link rel="icon" href="imagens/negativo.png">
   <meta charset="utf-8">
   <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> -->
@@ -12,9 +12,7 @@
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+ 
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
@@ -23,47 +21,49 @@
     </ul>
     </div>
 
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item ">
-        <a class="nav-link" href="homeadm.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="avisosadm.html">Avisos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cadadm.html">Cadastrar Adm</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="campanhas.html">Campanhas</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="configadm.html">Configurações</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="loginadm.html">Sair</a>
-      </li>
-    </ul>
+
+    <div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="homeadm.html">Home</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="avisosadm.html">Avisos</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="cadadm.html">Cadastrar ADM</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="campanhas.html">Campanhas</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="configadm.html">Configurações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="loginadm.html">Sair</a>
+    </div>
+
+  </div>
+</div>
+     
   </div>
 </nav>
 </head>
 
 <body>
-  <br><br><br><br>
-
+  <br><br><br><br><br><br><br>
 
 <div class="container-fluid">
   <center>
     <H3> ALTERAÇÃO SALVA COM SUCESSO!</H3>
     <br>
-    <a type="button" class="btn btn-light" href="homeadm.html">DASHBOARD</a>
+    <a type="button" class="btn btnnovo" href="homeadm.html">DASHBOARD</a>
   </center>
 </div><br><br><br>
 
 
- <footer class="container-fluid" style="background-color: #41679B; bottom: 0; position: absolute;">
+  <footer style="bottom:0;">
 
-      <div class="footer-sm">
-        <p>&copy DigitaVac 2021</p>
-      </div>
+      <br>
+        <center><p>&copy DigitaVac 2021</p></center>
   </footer>
