--- a/Codigo/editaCadatro.html
+++ b/Codigo/editaCadatro.html
@@ -41,7 +41,7 @@
       <div class="col-md-4"></div>
       <div class="col-md-4">
         <div class="col-md-12 text-center">
-          <h2 style="margin-bottom: 50px;">Crie sua conta</h2>
+          <h2 style="margin-bottom: 50px;">Edite sua conta</h2>
         </div>
         <form name="cadastro" class="form-group cadastro">
           <p class="lbl_cadastro">Email</p>
