--- a/Codigo/editarDadosSelecao.html
+++ b/Codigo/editarDadosSelecao.html
@@ -36,7 +36,7 @@
       <div class="col-md-4"></div>
       <div class="col-md-4">
         <div class="col-md-12 text-center">
-          <h2 style="margin-bottom: 50px;">Edite sua conta</h2>
+          <h2 style="margin-bottom: 50px;">Edite Dados</h2>
         </div>
         <form name="cadastro" class="form-group cadastro">
           <p class="lbl_cadastro">Email</p>
@@ -45,7 +45,7 @@
           <p class="lbl_cadastro">Senha</p>
           <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
           <div class="col-md-12 text-center">
-            <a href="#" onclick="validarEdicao(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Editar</a>
+            <a href="#" onclick="validarEdicaoAdm(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Editar</a>
           </div>
         </form>
       </div>
