--- a/Codigo/cadastro.html
+++ b/Codigo/cadastro.html
@@ -47,10 +47,11 @@
           <p class="lbl_cadastro">Senha</p>
           <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
           <div class="col-md-12 text-center">
-            <a href="login.html" onclick="tentarGravar(event)" type="button" class="btn btnnovo shadow" style="margin-bottom: 100px;">Cadastrar</a>
+            <a href="#" onclick="tentarGravar(event)" type="button" class="btn btnnovo shadow" style="margin-bottom: 50px;">Cadastrar</a><br>
+            <a href="CadatroAdm.html" type="button" class="btn btnnovo shadow" style="margin-bottom: 50px;">Cadastrar Administrador</a>
           </div>
           <div class="col-md-12 text-center">
-            <a href="editarCadastroSelecao.html" onclick="tentarGravar(event)" type="button" class="btn btnnovo shadow" style="margin-bottom: 100px;">Editar cadastro</a>
+            <a href="editarCadastroSelecao.html" type="button" class="btn btnnovo shadow" style="margin-bottom: 50px;">Editar cadastro</a>
           </div>
         </form>
       </div>
