--- a/Codigo/editaCadastroAdm.html
+++ b/Codigo/editaCadastroAdm.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  
+  <script>
+      window.onload = () => {
+            preenchertabela();
+        };
+  </script>
+  
 
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
@@ -36,20 +43,40 @@
       <div class="col-md-4"></div>
       <div class="col-md-4">
         <div class="col-md-12 text-center">
-          <h2 style="margin-bottom: 50px;">Edite sua conta</h2>
+          <h2 style="margin-bottom: 50px;">Edite as contas de usuario</h2>
         </div>
+
         <form name="cadastro" class="form-group cadastro">
           <p class="lbl_cadastro">Email</p>
           <input type="email" id="email" name="email" placeholder="Email" class="form-control box shadow-sm" required>
           <div id="msgEmail"></div>
-          <p class="lbl_cadastro">Senha</p>
-          <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
+          <p class="lbl_cadastro">Nome</p>
+          <input type="text" id="nome" name="nome" placeholder="Nome" class="form-control box shadow-sm" required>
+          <p class="lbl_cadastro">Nova senha</p>
+          <input type="password" id="newsenha1" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
+          <p class="lbl_cadastro">Confirmar nova senha</p>
+          <input type="password" id="newsenha2" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
+          <div id="msgNewSenha2"></div>
+          
           <div class="col-md-12 text-center">
-            <a href="#" onclick="validarEdicao(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Editar</a>
+            <a href="#" onclick="regravarAdm(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Salvar</a>
+            <a href="#" onclick="excluirAdm(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Excluir</a>
           </div>
+
         </form>
       </div>
-      <div class="col-md-4"></div>
+      <div class="col-12">
+          <table id="usuariosUsers">
+              <tr>
+                <th>#</th>  
+                <th>Nome</th>
+                <th>Email</th>
+                <th>Tipo</th>
+              </tr>
+              <tbody id="table-contatos">
+            </tbody>
+          </table>
+      </div>
     </div>
   </div><br><br><br>
 
