--- a/Codigo/homeadm.html
+++ b/Codigo/homeadm.html
@@ -8,6 +8,34 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+
+      <script src="loginadm.js"></script>
+    <script>
+        if (!usuarioAtual) {
+            window.location.href = Login_Link;
+        }
+
+        function exibe() {
+            
+            let listaUsuarios = '';
+            for (i = 0; i < db_adms.adms.lengthh; i++) {
+                let usuario = db_adms.adms[i];
+                listaUsuarios += `<tr><td scope="row">${usuario.nome}</td><td>${usuario.login}</td><td>${usuario.email}</td></tr>`;
+            }
+
+            document.getElementById("table-usuarios").innerHTML = listaUsuarios
+
+        }
+
+        function initPage() {
+
+            document.getElementById('btn_logout').addEventListener('click', logoutUser);
+            exibe ();
+        }
+
+        window.addEventListener('load', initPage);
+    </script>
+
   
 
 <!-- Menu do topo --> 
@@ -21,7 +49,7 @@
     </ul>
     </div>
 
-<div style:"right:0;">
+<div >
   <div class="row">
     <div class="col-sm">
 <a class="nav-link" href="homeadm.html"><strong> Home </strong></a>
@@ -39,7 +67,7 @@
 <a class="nav-link" href="configadm.html">Configurações</a>
     </div>
     <div class="col-sm">
-<a class="nav-link" href="loginadm.html">Sair</a>
+<a class="nav-link" href="loginadm.html" id="btn_logout">Sair</a>
     </div>
 
   </div>
