--- a/Codigo/home.html
+++ b/Codigo/home.html
@@ -58,13 +58,9 @@
 </center><br>
 </div>
 
-<center><div id="projetos" class="col-8" style="background-color: #EBBD47;">
-USUÁRIO, você tem uma vacina programada para o dia 05/11/2021. Confira o seu calendário<br> <hr>
-USUÁRIO, há uma nova campanha de vacinação para a terceira dose da vacina contra COVID-19. Confira a notificação no seu email cadastrado.
-</div></center> <br><br><br>
 
 
-  <footer>
+  <footer style="bottom:0;">
 
       <br>
         <center><p>&copy DigitaVac 2021</p></center>
